HelloUltraviolet/Fixtures/RejectedSource/Procedures/VerificationLogicDiagnostic/Expected.uv
//! Expected diagnostic metadata for the VerificationLogicDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2801", "diag.15.VerificationLogic")
